# storage_analyser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
installer/: storage-analyzer.iss
installer/icon/: app.rc  make_ico.ps1  make_setup_ico.ps1
src/: drives.rs  export.rs  main.rs  model.rs  open.rs  privileges.rs  recycle.rs  scan.rs  walker.rs
src/mft/: boot_sector.rs  data_runs.rs  mod.rs  reader.rs  record.rs
src/ui/: app.rs  app_storage.rs  disk_cache.rs  drive_picker.rs  keys.rs  mod.rs  theme.rs  tree_view.rs
